@@ -1,6 +1,7 @@
 Development Portal (2014-08-07 shi)
 ==============================
 Added generic chunks for different portals
+Stats link "0" disabled
 
 
 Development Portal (2014-08-06 shi)
